# Classroom-Attendance-System

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  config.py  environment.yml  pyproject.toml
.github/workflows/: diagram.yml  qodana_code_quality.yml
app/: __init__.py  config.py  face_feature_processor.py  features_extraction_to_csv.py  get_faces_from_camera.py  log.py  models.py  student.py  teacher.py  views.py
app/data_access/: student_faces_repo.py  student_repository.py  teacher_repository.py
app/database/: __init__.py  models.py
app/static/css/: 5.css  7.css  my.css  style1.css  styles.css
app/static/js/: echarts.min.js
app/static/translations/: zh_CN.json
app/templates/: 404.html  error.html  login.html
app/templates/student/: choose_course.html  drop_course.html  get_faces.html  my_faces.html  my_records.html  student_home.html  unchoose_course.html  update_password.html
app/templates/teacher/: all_student.html  all_teacher.html  course_attend.html  course_management.html  index.html  show_records.html  student_getFace.html  teacher_home.html  update_password.html
app/utils/: __init__.py  camera.py  face_classifier.py  face_feature_processor.py  model.py  session_manager.py  translator.py
classroom_attendance_system/: config.py  manage.py
classroom_attendance_system/classroom_attendance_system/: urls.py  wsgi.py
classroom_attendance_system/classroom_attendance_system/settings/: base.py  dev.py
classroom_attendance_system/classroom_attendance_system/templates/: base.html
classroom_attendance_system/facial_entry/utils/: __init__.py  camera.py  face_classifier.py
classroom_attendance_system/home/: models.py
classroom_attendance_system/resources/translations/: zh_CN.json
classroom_attendance_system/tests/: test_create_user_and_class.py  test_init.py
migrations/versions/: 00fdbe2e4fec_initial_migration.py  7582ab4f5165_added_new_table.py  a7023a49ec69_drop_unused_table.py
src/: cli.py  config.py
src/database/: db.py  db_model.py
src/resources/database/: db.py
src/resources/translations/: zh_CN.json
src/tests/: conftest.py  test_create_user_and_class.py  test_init.py
src/utils/: __init__.py  camera.py  db_model.py  face_classifier.py  log.py  translator.py
src/webui/mysite/mysite/: settings.py
src/webui/mysite/polls/: admin.py  test.py  views.py
src/webui/mysite/polls/migrations/: 0001_initial.py
src/webui/mysite/polls/templates/polls/: detail.html  index.html  results.html
src/webui/web-ui/: README.md  package-lock.json  package.json
tests/: __init__.py
