[project]
name = "Classroom-Attendance-System"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "BalconyJH", email = "balconyjh@gmail.com"},
]
dependencies = [
    "dlib>=19.24.2",
    "numpy>=1.26.3",
    "opencv-python>=4.9.0.80",
    "scikit-image>=0.22.0",
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.1",
    "pandas>=2.1.4",
    "pymysql>=1.1.0",
    "sentry-sdk[flask]>=1.39.2",
    "setuptools>=69.0.3",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "cryptography>=41.0.7",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "GPL-3.0 license" }

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901", "UP037", "T201", "F403"]
line-length = 120

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
executionEnvironments = [
    { root = "./tests", extraPaths = [
        "./",
    ] },
    { root = "./" },
]

typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true
distribution = false

[tool.pytest.ini_options]
asyncio_mode = "auto"