[project]
name = "Classroom-Attendance-System"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "BalconyJH", email = "balconyjh@gmail.com"},
]
dependencies = [
    "dlib>=19.24.2",
    "numpy>=1.26.3",
    "opencv-python>=4.9.0.80",
    "scikit-image>=0.22.0",
    "flask[async]>=3.0.1",
    "Flask-SQLAlchemy>=3.1.1",
    "pandas>=2.1.4",
    "pymysql>=1.1.0",
    "sentry-sdk[flask]>=1.39.2",
    "setuptools>=69.0.3",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "cryptography>=41.0.7",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "GPL-3.0 license" }

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q", "TID", "RUF"]
ignore = ["E402", "C901", "UP037"]
exclude = ["app/static/**", "app/tempplates/**"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
length-sort = true
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
executionEnvironments = [
    { root = "./tests", extraPaths = [
        "./",
    ] },
    { root = "./" },
]

typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true

[tool.pdm]
distribution = false

[tool.pytest.ini_options]
asyncio_mode = "auto"